// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MenuItem - tests > renders the component correctly 1`] = `
<DocumentFragment>
  <div
    class="style={}
"
  >
    <a
      class="style={
  ':hover': {
    backgroundColor: '#EBEDFF',
  },
  alignItems: 'center',
  boxSizing: 'border-box',
  cursor: 'pointer',
  display: 'flex',
  height: '36px',
  outline: 'none',
  padding: '0 0.5rem',
  textDecoration: 'none',
}
"
      data-testid="menu-item--root"
      href="/"
      tabindex="0"
    >
      <div
        class="style={
  alignItems: 'center',
  display: 'flex',
  flex: 1,
  gap: '0.5rem',
  overflow: 'hidden',
}
"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          height="16"
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8,3.3l1.4,2.8l0.2,0.5l0.5,0.1l3.1,0.4L11,9.2l-0.4,0.4l0.1,0.5l0.5,3.1l-2.8-1.4L8,11.5l-0.5,0.2l-2.8,1.4l0.5-3.1 l0.1-0.5L5,9.2L2.8,7l3.1-0.4l0.5-0.1L6.6,6L8,3.3 M8,1L5.7,5.6L0.6,6.3l3.7,3.6L3.5,15L8,12.6l4.6,2.4l-0.9-5.1l3.7-3.6l-5.1-0.7 L8,1z"
          />
        </svg>
        <span
          class="style={ flex: 1, overflow: 'hidden' }
"
        >
          <span
            class="style={ overflow: 'hidden' }
"
            id="bui1__anchor"
          >
            <p
              class="style={
  WebkitBoxOrient: 'vertical',
  WebkitLineClamp: 1,
  color: '#69768B',
  display: '-webkit-box',
  fontFamily: '"Albert Sans", sans-serif',
  fontSize: 'max(calc(var(--font-base-size) * var(--font-scale-body-small-mono)), 12px)',
  fontWeight: '400',
  lineHeight: 1.5,
  margin: 0,
  overflow: 'hidden',
  textAlign: 'start',
  textOverflow: 'ellipsis',
  whiteSpace: 'pre-wrap',
  wordBreak: 'break-all',
}
"
              data-baseweb="typo-paragraphsmall"
            >
              example label
            </p>
          </span>
        </span>
        <div
          class="style={
  alignItems: 'center',
  backgroundColor: '#FFFFFF',
  border: '1px solid',
  borderColor: '#E0E3EB',
  borderRadius: '20px',
  boxSizing: 'border-box',
  color: '#283242',
  display: 'inline-flex',
  gap: '4px',
  height: '20px',
  maxWidth: '100%',
  padding: '0 0.5rem',
  width: 'max-content',
}
"
          data-testid="menu-item_label__counter"
        >
          <span
            class="style={ overflow: 'hidden' }
"
            id="bui2__anchor"
          >
            <p
              class="style={
  WebkitBoxOrient: 'vertical',
  WebkitLineClamp: 1,
  color: 'inherit',
  display: '-webkit-box',
  fontFamily: '"Albert Sans", sans-serif',
  fontSize: 'max(calc(var(--font-base-size) * var(--font-scale-microcopy)), 12px)',
  fontWeight: '400',
  lineHeight: 1.5,
  margin: 0,
  overflow: 'hidden',
  textAlign: 'start',
  textOverflow: 'ellipsis',
  whiteSpace: 'pre-wrap',
  wordBreak: 'break-all',
}
"
              data-baseweb="typo-paragraphxsmall"
            >
              5
            </p>
          </span>
        </div>
      </div>
    </a>
  </div>
  <div
    class="style={}
"
  />
</DocumentFragment>
`;

exports[`MenuItem - tests > renders the component correctly when \`disabled\` is \`true\` 1`] = `
<DocumentFragment>
  <div
    class="style={}
"
  >
    <a
      class="style={
  alignItems: 'center',
  backgroundColor: '#FFFFFF',
  boxSizing: 'border-box',
  cursor: 'not-allowed',
  display: 'flex',
  height: '36px',
  outline: 'none',
  padding: '0 0.5rem',
  textDecoration: 'none',
}
"
      data-testid="menu-item--root"
      href="/"
      tabindex="-1"
    >
      <div
        class="style={
  alignItems: 'center',
  display: 'flex',
  flex: 1,
  gap: '0.5rem',
  overflow: 'hidden',
}
"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          height="16"
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8,3.3l1.4,2.8l0.2,0.5l0.5,0.1l3.1,0.4L11,9.2l-0.4,0.4l0.1,0.5l0.5,3.1l-2.8-1.4L8,11.5l-0.5,0.2l-2.8,1.4l0.5-3.1 l0.1-0.5L5,9.2L2.8,7l3.1-0.4l0.5-0.1L6.6,6L8,3.3 M8,1L5.7,5.6L0.6,6.3l3.7,3.6L3.5,15L8,12.6l4.6,2.4l-0.9-5.1l3.7-3.6l-5.1-0.7 L8,1z"
          />
        </svg>
        <span
          class="style={ flex: 1, overflow: 'hidden' }
"
        >
          <span
            class="style={ overflow: 'hidden' }
"
            id="bui1__anchor"
          >
            <p
              class="style={
  WebkitBoxOrient: 'vertical',
  WebkitLineClamp: 1,
  color: '#B4BAC5',
  display: '-webkit-box',
  fontFamily: '"Albert Sans", sans-serif',
  fontSize: 'max(calc(var(--font-base-size) * var(--font-scale-body-small-mono)), 12px)',
  fontWeight: '400',
  lineHeight: 1.5,
  margin: 0,
  overflow: 'hidden',
  textAlign: 'start',
  textOverflow: 'ellipsis',
  whiteSpace: 'pre-wrap',
  wordBreak: 'break-all',
}
"
              data-baseweb="typo-paragraphsmall"
            >
              example label
            </p>
          </span>
        </span>
        <div
          aria-disabled="true"
          class="style={
  alignItems: 'center',
  backgroundColor: '#FFFFFF',
  border: '1px solid',
  borderColor: '#E0E3EB',
  borderRadius: '20px',
  boxSizing: 'border-box',
  color: '#B4BAC5',
  display: 'inline-flex',
  gap: '4px',
  height: '20px',
  maxWidth: '100%',
  padding: '0 0.5rem',
  width: 'max-content',
}
"
          data-testid="menu-item_label__counter"
        >
          <span
            class="style={ overflow: 'hidden' }
"
            id="bui2__anchor"
          >
            <p
              class="style={
  WebkitBoxOrient: 'vertical',
  WebkitLineClamp: 1,
  color: 'inherit',
  display: '-webkit-box',
  fontFamily: '"Albert Sans", sans-serif',
  fontSize: 'max(calc(var(--font-base-size) * var(--font-scale-microcopy)), 12px)',
  fontWeight: '400',
  lineHeight: 1.5,
  margin: 0,
  overflow: 'hidden',
  textAlign: 'start',
  textOverflow: 'ellipsis',
  whiteSpace: 'pre-wrap',
  wordBreak: 'break-all',
}
"
              data-baseweb="typo-paragraphxsmall"
            >
              5
            </p>
          </span>
        </div>
      </div>
    </a>
  </div>
  <div
    class="style={}
"
  />
</DocumentFragment>
`;

exports[`MenuItem - tests > renders the component correctly when \`size\` is \`large\` 1`] = `
<DocumentFragment>
  <div
    class="style={}
"
  >
    <a
      class="style={
  ':hover': {
    backgroundColor: '#EBEDFF',
  },
  alignItems: 'center',
  boxSizing: 'border-box',
  cursor: 'pointer',
  display: 'flex',
  height: '56px',
  outline: 'none',
  padding: '0 1.5rem',
  textDecoration: 'none',
}
"
      data-testid="menu-item--root"
      href="/"
      tabindex="0"
    >
      <div
        class="style={
  alignItems: 'center',
  display: 'flex',
  flex: 1,
  gap: '0.5rem',
  overflow: 'hidden',
}
"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          height="24"
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 32 32"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16,6.52l2.76,5.58.46,1,1,.15,6.16.89L22,18.44l-.75.73.18,1,1.05,6.13-5.51-2.89L16,23l-.93.49L9.56,26.34l1-6.13.18-1L10,18.44,5.58,14.09l6.16-.89,1-.15.46-1L16,6.52M16,2l-4.55,9.22L1.28,12.69l7.36,7.18L6.9,30,16,25.22,25.1,30,23.36,19.87l7.36-7.17L20.55,11.22Z"
          />
        </svg>
        <span
          class="style={ flex: 1, overflow: 'hidden' }
"
        >
          <span
            class="style={ overflow: 'hidden' }
"
            id="bui1__anchor"
          >
            <p
              class="style={
  WebkitBoxOrient: 'vertical',
  WebkitLineClamp: 1,
  color: '#69768B',
  display: '-webkit-box',
  fontFamily: '"Albert Sans", sans-serif',
  fontSize: 'max(calc(var(--font-base-size) * var(--font-scale-body-small-mono)), 12px)',
  fontWeight: '400',
  lineHeight: 1.5,
  margin: 0,
  overflow: 'hidden',
  textAlign: 'start',
  textOverflow: 'ellipsis',
  whiteSpace: 'pre-wrap',
  wordBreak: 'break-all',
}
"
              data-baseweb="typo-paragraphsmall"
            >
              example label
            </p>
          </span>
        </span>
        <div
          class="style={
  alignItems: 'center',
  backgroundColor: '#FFFFFF',
  border: '1px solid',
  borderColor: '#E0E3EB',
  borderRadius: '20px',
  boxSizing: 'border-box',
  color: '#283242',
  display: 'inline-flex',
  gap: '4px',
  height: '20px',
  maxWidth: '100%',
  padding: '0 0.5rem',
  width: 'max-content',
}
"
          data-testid="menu-item_label__counter"
        >
          <span
            class="style={ overflow: 'hidden' }
"
            id="bui2__anchor"
          >
            <p
              class="style={
  WebkitBoxOrient: 'vertical',
  WebkitLineClamp: 1,
  color: 'inherit',
  display: '-webkit-box',
  fontFamily: '"Albert Sans", sans-serif',
  fontSize: 'max(calc(var(--font-base-size) * var(--font-scale-microcopy)), 12px)',
  fontWeight: '400',
  lineHeight: 1.5,
  margin: 0,
  overflow: 'hidden',
  textAlign: 'start',
  textOverflow: 'ellipsis',
  whiteSpace: 'pre-wrap',
  wordBreak: 'break-all',
}
"
              data-baseweb="typo-paragraphxsmall"
            >
              5
            </p>
          </span>
        </div>
      </div>
    </a>
  </div>
  <div
    class="style={}
"
  />
</DocumentFragment>
`;

exports[`MenuItem - tests > renders the component correctly when is focused 1`] = `
<DocumentFragment>
  <div
    class="style={}
"
  >
    <a
      class="style={
  ':hover': {
    backgroundColor: '#EBEDFF',
  },
  alignItems: 'center',
  borderRadius: '0.25rem',
  boxSizing: 'border-box',
  cursor: 'pointer',
  display: 'flex',
  height: '36px',
  outline: '2px solid #171A1C',
  outlineOffset: '-2px',
  padding: '0 0.5rem',
  textDecoration: 'none',
}
"
      data-testid="menu-item--root"
      href="/"
      tabindex="0"
    >
      <div
        class="style={
  alignItems: 'center',
  display: 'flex',
  flex: 1,
  gap: '0.5rem',
  overflow: 'hidden',
}
"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          height="16"
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8,3.3l1.4,2.8l0.2,0.5l0.5,0.1l3.1,0.4L11,9.2l-0.4,0.4l0.1,0.5l0.5,3.1l-2.8-1.4L8,11.5l-0.5,0.2l-2.8,1.4l0.5-3.1 l0.1-0.5L5,9.2L2.8,7l3.1-0.4l0.5-0.1L6.6,6L8,3.3 M8,1L5.7,5.6L0.6,6.3l3.7,3.6L3.5,15L8,12.6l4.6,2.4l-0.9-5.1l3.7-3.6l-5.1-0.7 L8,1z"
          />
        </svg>
        <span
          class="style={ flex: 1, overflow: 'hidden' }
"
        >
          <span
            class="style={ overflow: 'hidden' }
"
            id="bui1__anchor"
          >
            <p
              class="style={
  WebkitBoxOrient: 'vertical',
  WebkitLineClamp: 1,
  color: '#69768B',
  display: '-webkit-box',
  fontFamily: '"Albert Sans", sans-serif',
  fontSize: 'max(calc(var(--font-base-size) * var(--font-scale-body-small-mono)), 12px)',
  fontWeight: '400',
  lineHeight: 1.5,
  margin: 0,
  overflow: 'hidden',
  textAlign: 'start',
  textOverflow: 'ellipsis',
  whiteSpace: 'pre-wrap',
  wordBreak: 'break-all',
}
"
              data-baseweb="typo-paragraphsmall"
            >
              example label
            </p>
          </span>
        </span>
        <div
          class="style={
  alignItems: 'center',
  backgroundColor: '#FFFFFF',
  border: '1px solid',
  borderColor: '#E0E3EB',
  borderRadius: '20px',
  boxSizing: 'border-box',
  color: '#283242',
  display: 'inline-flex',
  gap: '4px',
  height: '20px',
  maxWidth: '100%',
  padding: '0 0.5rem',
  width: 'max-content',
}
"
          data-testid="menu-item_label__counter"
        >
          <span
            class="style={ overflow: 'hidden' }
"
            id="bui2__anchor"
          >
            <p
              class="style={
  WebkitBoxOrient: 'vertical',
  WebkitLineClamp: 1,
  color: 'inherit',
  display: '-webkit-box',
  fontFamily: '"Albert Sans", sans-serif',
  fontSize: 'max(calc(var(--font-base-size) * var(--font-scale-microcopy)), 12px)',
  fontWeight: '400',
  lineHeight: 1.5,
  margin: 0,
  overflow: 'hidden',
  textAlign: 'start',
  textOverflow: 'ellipsis',
  whiteSpace: 'pre-wrap',
  wordBreak: 'break-all',
}
"
              data-baseweb="typo-paragraphxsmall"
            >
              5
            </p>
          </span>
        </div>
      </div>
    </a>
  </div>
  <div
    class="style={}
"
  />
</DocumentFragment>
`;
